Changes for 1.8.16rc1

...G...PS. [ZBX-5383] maximum data size accepted via Zabbix communication protocol is limited to 128 MB (Andris)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A......... [ZBX-5395] fixed {ITEM.LASTVALUE1} and {ITEM.VALUE1} expanding in the trigger.get method (Pavels)

Changes for 1.8.15

1.8.15rc1 was released as 1.8.15 without any changes

Changes for 1.8.15rc1

........S. [ZBX-4527] removed limitation of alerter script command line (Sasha)
........S. [ZBX-5367] fixed assignment of elements to a maintenance mode by a timer process (Sasha)
..F....... [ZBX-5348] fixed validation of itemid parameter for popup_bitem.php (Vedmak)
....I..... [ZBX-5357] fixed typos in help_items item key descriptions (Richlv)
..F....... [ZBX-5319] fixed incorrect calculation of action escalation steps delay (Vedmak)
A......... [ZBX-5264] fixed 'undefined variable: nodeids [api/classes/class.cscreen.php:286]' (Toms)
..F....... [ZBX-5316] fixed incorrect screen items can be deleted when deleting hosts (Vedmak)
..F....... [ZBX-3782] fixed {HOSTNAME} macro not working in map labels trigger expression macro (Vedmak)
..F....... [ZBX-5236] fixed some map element rendering ignoring the "Problem display" map option (Pavels)
..F....... [ZBX-3245] fixed trigger item selection pop up not working with items from child nodes (Pavels)
A......... [ZBX-4929] optimized host group SQL queries (Eduard)

Changes for 1.8.14

1.8.14rc1 was released as 1.8.14 without any changes

Changes for 1.8.14rc1

A.F....... [ZBX-4007] fixed not being able to add screens from a child node to a slideshow (Pavels)
..F....... [ZBX-5147] fixed profiler lib not supporting G suffix for memory_limit option (Vedmak)
...G...... [ZBX-5027] added file size check to log monitoring to report error if it's over 2 GB (dimir)
.......PS. [ZBX-4980] fixed error in decoding of big base64 encoded values (Andris)